# mugraph

./: .dockerignore  .envrc  .gitignore  .impeccable.md  .mcp.json  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  overlay.nix  rust-toolchain.toml  rustfmt.toml
.beads/: issues.jsonl
benches/: seal.rs
circuits/: Cargo.toml
circuits/base/: Cargo.toml
circuits/base/src/: lib.rs
circuits/examples/: generate-proof.rs
circuits/guest/: Cargo.toml
circuits/guest/src/: lib.rs  main.rs
circuits/send-note/: Cargo.toml
circuits/send-note/guest/: Cargo.toml
circuits/send-note/src/: main.rs
circuits/src/: error.rs  lib.rs
circuits/swap/: Cargo.toml
circuits/swap/guest/: Cargo.toml
circuits/swap/guest/src/: main.rs
circuits/swap/src/: lib.rs
client/: Cargo.toml
client/src/: builder.rs  lib.rs
client/tests/: test_validate.rs
contract/: README.md  program.json
core/: Cargo.toml
core/programs/: Cargo.toml
core/programs/guest/: Cargo.toml
core/programs/guest/benches/: consume.rs  validate.rs
core/programs/guest/src/: lib.rs
core/programs/guest/src/actions/: apply.rs  mod.rs  seal.rs
core/programs/src/: lib.rs
core/src/: builder.rs  crypto.rs  error.rs  event.rs  hash.rs  lib.rs  note.rs  operation.rs  serialize.rs  signature.rs  swap.rs  testing.rs  transaction.rs  util.rs  utils.rs  wallet.rs
core/src/builder/: mod.rs
core/src/builder/coin_selection/: greedy.rs  knapsack.rs  mod.rs
core/src/contracts/: fission.rs  fusion.rs  mod.rs
core/src/crypto/: commitment.rs  dh.rs  diffie_hellman.rs  mod.rs  pedersen.rs  proof.rs  range_proof.rs  schnorr.rs  traits.rs
core/src/metrics/: mod.rs
core/src/programs/: apply.rs  compose.rs  mod.rs  validate.rs  verify.rs
core/src/types/: asset.rs  builder.rs  cardano.rs  datum.rs  delegate.rs  dleq.rs  event.rs  hash.rs  keypair.rs  manifest.rs  mod.rs  note.rs  operation.rs  public_key.rs  reaction.rs  refresh.rs  request.rs  response.rs  seal.rs  sealed.rs  secret_key.rs  signature.rs  transaction.rs  wallet.rs  xnode.rs
core/src/types/event/: fission.rs  fusion.rs  mod.rs
core/src/types/op/: swap.rs
core/src/types/operation/: join.rs  mod.rs  split.rs
core/src/types/request/: mod.rs  swap.rs  v0.rs
core/src/types/response/: mod.rs  v0.rs
core/src/util/: bitset.rs  mod.rs
core/src/utils/: bitset.rs  mod.rs
core/tests/: constants.rs  serialize.rs  test_transaction.rs
crates/core/: Cargo.toml
crates/core/derive/src/: lib.rs
crates/core/programs/: Cargo.toml
crates/core/programs/guest/: Cargo.toml
crates/core/programs/guest/src/: lib.rs
crates/core/programs/guest/src/actions/: apply.rs  commit.rs  decommit.rs  mod.rs
crates/core/programs/src/core/: mod.rs
crates/core/src/: error.rs  io.rs  lib.rs  types.rs  wallet.rs
crates/core/src/crypto/: mod.rs  schnorr.rs
crates/core/src/programs/: fusion.rs  mod.rs
crates/core/src/prover/: mod.rs
crates/core/src/types/: hash.rs  manifest.rs  mod.rs  seal.rs  signature.rs
crates/core/tests/: constants.rs  serialize.rs  test_transaction.rs
crates/programs/: Cargo.toml
crates/programs/guest/: Cargo.toml
crates/programs/src/: lib.rs
crypto/: Cargo.toml
dependencies/: default.nix
derive/: Cargo.toml
docs/: crypto.md  introduction.md  licensing.md  litepaper.typ  motivation.md  openapi.yaml  roadmap.md  spec.md  wallet-integration-checklist.md  wallet-integration.md  workflow.md
examples/: Cargo.toml  generate-proof.rs
examples/benches/: foo.rs
macros/: Cargo.toml
mint/: Cargo.toml
mu/: Cargo.toml
mu/src/: event.rs  lib.rs  proof.rs
mu/src/types/: delta.rs  hlc.rs  mod.rs  theta.rs
mu/src/util/: mod.rs
mu/src/values/: account.rs  mod.rs
nix/: buildRisc0Package.nix  cargo-risczero.nix  default.nix  env.nix  lib.nix  overlay.nix  pre-commit-hook.nix  r0vm.nix  risczero.nix  scripts.nix
node/: Cargo.toml  package.nix
node/benches/: transaction.rs
node/proptest-regressions/: crypto.txt
node/src/: cardano.rs  config.rs  context.rs  database.rs  deposit_datum.rs  deposit_monitor.rs  lib.rs  lifecycle.rs  main.rs  network.rs  observability.rs  peer_registry.rs  provider.rs  reconciler.rs  tx_ids.rs  tx_signer.rs
node/src/cardano/: address.rs  keys.rs  validator_artifacts.rs  wallet.rs
node/src/crypto/: mod.rs
node/src/database/: mod.rs  test_backend.rs
node/src/provider/: blockfrost.rs  common.rs  maestro.rs
node/src/route/v0/: mod.rs  refresh.rs  transaction.rs
node/src/routes/: cross_node.rs  deposit.rs  mod.rs  refresh.rs  withdraw.rs
node/src/routes/cross_node/: audit.rs  auth.rs  idempotency.rs  mod.rs  status.rs  tests.rs
node/src/routes/deposit/: claims.rs  persistence.rs  signature.rs  source_validation.rs
node/src/routes/withdraw/: input_validation.rs  io.rs  mod.rs  parsed_tx.rs  state.rs  tx_checks.rs
node/tests/: cardano_integration_tests.rs  config_tests.rs  confirm_depth_tests.rs  cross_node_route_smoke.rs  database_migration_tests.rs  deposit_tests.rs  intent_hash_tests.rs  m3_chaos_scenarios.rs  m3_verification_tests.rs  peer_registry_tests.rs  peer_registry_validation_tests.rs  provider_retry_tests.rs  provider_tests.rs  refresh_route_tests.rs  router_startup_tests.rs  security_audit_tests.rs  tx_signer_tests.rs  validator_evaluation.rs  withdrawal_tests.rs
node/tests/fixtures/: preprod_cost_models.json  preprod_cost_models.version
programs/: Cargo.toml
protocol/: Cargo.toml
protocol/src/types/: mod.rs  theta.rs
rpc/: Cargo.toml
scripts/: commit_funds.sh  deploy_reference_script.sh  dev-cluster.sh
simulator/: Cargo.toml  package.nix
simulator/src/: action.rs  assets.json  assets.rs  client.rs  config.rs  delegate.rs  lib.rs  main.rs  node.rs  simulation.rs  state.rs  tick.rs  tui.rs  types.rs  ui.rs  user.rs
simulator/src/agents/: delegate.rs  mod.rs  user.rs
simulator/src/observer/: input.rs  metrics.rs  mod.rs
simulator/src/util/: location.rs  mod.rs
src/: error.rs  lib.rs  testing.rs
src/mint/: mod.rs  (+1 more)
support/: roadmap.md
tail/: Cargo.toml
tests/: foo.rs  test_foo.rs
validator/: README.md  aiken.toml  plutus.json
(+157 files in other folders)
