[workspace]
members = ["mint"]

[package]
name = "mugraph"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mugraph-payments/mugraph"
keywords = ["ecash", "cardano"]

[dependencies]
anyhow = "1.0.91"
ark-ec = { version = "0.5.0", features = ["std"] }
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
hickory-resolver = { version = "0.24.1", default-features = false, features = [
  "dns-over-rustls",
] }
onlyerror = "0.1.4"
proptest = "1.5.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
redb = "2.1.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"
test-strategy = "0.4.0"

[dev-dependencies]
bincode = "1.3.3"
criterion = "0.5.1"
paste = "1.0.15"
rand_chacha = "0.3.1"
sha2 = "0.10.8"

[profile.release]
lto = "fat"
opt-level = 3

[profile.dev.package]
curve25519-dalek.opt-level = 3
