[package]
name = "mugraph-circuits"
version = "0.0.1"
edition = "2021"

[dependencies]
mugraph-core = { workspace = true }
mugraph-circuits-swap = { path = "./swap" }

hex = { workspace = true }
miette = { workspace = true }
risc0-zkvm = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
