[package]
name = "mugraph-circuits"
version = "0.0.1"
edition = "2021"

[dependencies]
mugraph-core = { workspace = true }
risc0-zkvm = { version = "1.0.3", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
risc0-build = { version = "1.0.3" }

[package.metadata.risc0]
methods = ["guest"]
