[package]
name = "mugraph-core"
version = "0.0.1"
edition = "2021"

[dependencies]
blake3 = { version = "1.5.4", features = ["neon"] }
bytemuck = { version = "1.16.3", features = ["aarch64_simd"] }
curve25519-dalek = { version = "4.1.2", features = ["digest", "rand_core"] }
digest = { version = "0.10.7" }
hex = { version = "0.4.3", features = ["serde"] }
onlyerror = { version = "0.1.4" }
paste = "1.0.15"
proptest = { version = "1.5.0" }
rand = { version = "0.8.5" }
serde = { version = "1.0.204", features = ["derive"] }
serde_bytes = { version = "0.11.15" }
serde_json = "1.0.125"
test-strategy = { version = "0.4.0" }
