[package]
name = "mugraph-core"
version = "0.0.1"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
bytemuck = { workspace = true }
curve25519-dalek = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }
onlyerror = { workspace = true }
paste = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
test-strategy = { workspace = true }
