[package]
name = "mugraph-core"
version = "0.0.1"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
bytemuck = { workspace = true }
curve25519-dalek = { workspace = true }
indexmap = { workspace = true }
muhex = { workspace = true }
onlyerror = { workspace = true }
paste = "1.0.15"
proptest = { workspace = true }
rand = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
test-strategy = { workspace = true }
