[package]
name = "mugraph-examples"
version = "0.0.1"
edition = "2021"

[dependencies]
mugraph-client = { path = "../client" }

risc0-zkvm = { version = "1.0.5", default-features = false, features = [
    "client",
    "prove",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = []
metal = ["mugraph-client/metal"]
cuda = ["mugraph-client/cuda"]
