[package]
name = "mu"
version = "0.0.1"
edition = "2021"

[dependencies]
blake3 = { version = "1.5.1", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = "0.12.1"
paste = "1.0.15"
proptest = "1.4.0"
serde = { version = "1.0.201", features = ["derive"] }
test-strategy = "0.3.1"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
