[package]
name = "mugraph-node"
version = "0.1.0"
edition = "2024"

[dependencies]
mugraph-core = { workspace = true }

axum = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
metrics = { workspace = true }
muhex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
redb = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.12.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6.2", features = ["trace"] }
whisky = { workspace = true }
hex = "0.4.3"
serde_bytes = "0.11.15"
bech32 = "0.11.0"
blake2 = "0.10.6"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
