[package]
name = "mugraph-node"
version = "0.1.0"
edition = "2024"

[dependencies]
mugraph-core = { workspace = true }

axum = { workspace = true }
bech32 = "0.11.0"
blake2 = "0.10.6"
blake3 = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
coset = "0.4.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
metrics = { workspace = true }
muhex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
redb = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
whisky-csl = "1.0.24"
