[package]
name = "mugraph-protocol"
version = "0.0.1"
edition = "2021"

[dependencies]
blake3 = { version = "1.5.1", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
itertools = "0.12.1"
serde = { version = "1.0.201", features = ["derive"] }
