[package]
name = "mugraph-simulator"
version = "0.0.1"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
core_affinity = { workspace = true }
crossterm = "0.27"
indexmap = { workspace = true }
metrics = { workspace = true }
mimalloc = { workspace = true }
mugraph-core = { workspace = true }
mugraph-node = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
ratatui = "0.24"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
