[package]
name = "mugraph-simulator"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
core_affinity = { workspace = true }
crossterm = "0.29"
indexmap = { workspace = true }
metrics = { workspace = true }
mimalloc = { workspace = true }
mugraph-core = { workspace = true }
time = { version = "0.3", features = ["local-offset", "macros"] }
rand = { workspace = true }
rand_chacha = { workspace = true }
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["time", "env-filter"] }
