[package]
name = "mugraph-core"
version = "0.0.1"
edition = "2021"

[dependencies]
mugraph-derive = { path = "./derive" }

curve25519-dalek = { version = "4.1.2", default-features = false, features = ["rand_core"] }
hex = { version = "0.4.3", default-features = false, features = ["serde"] }
onlyerror = { version = "0.1.4", default-features = false }
paste = { version = "1.0.15" }
proptest = { version = "1.5.0", optional = true }
rand_core = { version = "0.6.4" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10.8", default-features = false }
test-strategy = { version = "0.4.0", optional = true }
tracing = "0.1.40"

[features]
default = ["std"]
std = [
  "curve25519-dalek/alloc",
  "hex/std",
  "onlyerror/std",
  "serde/std",
  "sha2/std",
  "dep:proptest",
  "dep:test-strategy"
]
