[package]
name = "mugraph-programs"
version = "0.0.1"
edition = "2021"

[dependencies]
mugraph-core = { path = "../core", default-features = false }

anyhow = "1.0.86"
onlyerror = { version = "0.1.4" }
risc0-zkvm = { version = "1.0.5", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
risc0-build = { version = "1.0.5" }

[package.metadata.risc0]
methods = ["guest"]
