[package]
name = "mugraph-core-programs-guest"
version = "0.0.1"
edition = "2021"

[dependencies]
mugraph-core = { path = "../..", default-features = false }
mugraph-core-programs = { path = "..", default-features = false }
risc0-zkvm = { version = "1.0.5", features = ["std"] }

[dev-dependencies]
iai = "0.1.1"

[[bench]]
name = "consume"
harness = false
