[package]
name = "mugraph-core-programs"
version = "0.0.1"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0.5", features = ["std"] }

[build-dependencies]
risc0-build = { version = "1.0.5" }

[package.metadata.risc0]
methods = ["guest"]

[target.'cfg(target_os = "macos")'.dependencies]
risc0-zkvm = { version = "1.0.5", features = ["metal", "std"] }

